@@ -350,6 +350,22 @@ public:
                                int flags = 0) = 0;
 
     /**
+        Draw a progress bar in the specified rectangle.
+
+        The @a value and @a max arguments determine the part of the progress
+        bar that is drawn as being filled in, @a max must be strictly positive
+        and @a value must be between 0 and @a max.
+
+        @since 3.1.0
+     */
+    virtual void DrawGauge(wxWindow* win,
+                           wxDC& dc,
+                           const wxRect& rect,
+                           int value,
+                           int max,
+                           int flags = 0) = 0;
+
+    /**
         Draw the header control button (used, for example, by wxListCtrl).
 
         Depending on platforms the @a flags parameter may support the @c wxCONTROL_SELECTED
